WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202575
[GTK][WPE] REGRESSION(
r250673
): connection to network process is broken after
r250673
https://bugs.webkit.org/show_bug.cgi?id=202575
Summary
[GTK][WPE] REGRESSION(r250673): connection to network process is broken after...
Carlos Garcia Campos
Reported
2019-10-04 01:48:24 PDT
The file descriptor is now closed when the IPC::Attachment is destroyed in NetworkProcessConnectionInfo destructor. In case of unix domain sockets we need to transfer the ownership of the fd to NetworkProcessConnection, but NetworkProcessConnectionInfo is ow keeping the ownership.
Attachments
Patch
(2.81 KB, patch)
2019-10-04 01:52 PDT
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-10-04 01:52:59 PDT
Created
attachment 380198
[details]
Patch
Carlos Garcia Campos
Comment 2
2019-10-04 02:43:03 PDT
Committed
r250713
: <
https://trac.webkit.org/changeset/250713
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug