[GTK][WPE] REGRESSION(r250673): connection to network process is broken after r250673 https://bugs.webkit.org/show_bug.cgi?id=202575

Reviewed by Carlos Alberto Lopez Perez.

The file descriptor is now closed when the IPC::Attachment is destroyed in NetworkProcessConnectionInfo
destructor. In case of unix domain sockets we need to transfer the ownership of the fd to
NetworkProcessConnection, but NetworkProcessConnectionInfo is ow keeping the ownership.

* WebProcess/Network/NetworkProcessConnectionInfo.h:
(WebKit::NetworkProcessConnectionInfo::releaseIdentifier): Use IPC::Attachment::releaseFileDescriptor() in case
of unix domain sockets.
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::ensureNetworkProcessConnection): Use NetworkProcessConnectionInfo::releaseIdentifier() when
passing the identifier to NetworkProcessConnection.

Canonical link: https://commits.webkit.org/216050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250713 268f45cc-cd09-0410-ab3c-d52691b4dbfc